--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "gatsby": "^4.24.0",
     "gatsby-plugin-manifest": "^4.25.0",
+    "gatsby-plugin-netlify": "^5.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
